err/plainbox.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/guacamole'...
Listing './lib/python3.5/site-packages/guacamole/ingredients'...
Listing './lib/python3.5/site-packages/guacamole/recipes'...
Listing './lib/python3.5/site-packages/guacamole-0.9.2.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/padme'...
Listing './lib/python3.5/site-packages/padme-1.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plainbox'...
Listing './lib/python3.5/site-packages/plainbox/data'...
Listing './lib/python3.5/site-packages/plainbox/data/plainbox-qml-modules'...
Listing './lib/python3.5/site-packages/plainbox/data/plainbox-qml-modules/Plainbox'...
Listing './lib/python3.5/site-packages/plainbox/data/report'...
Listing './lib/python3.5/site-packages/plainbox/impl'...
Listing './lib/python3.5/site-packages/plainbox/impl/commands'...
Listing './lib/python3.5/site-packages/plainbox/impl/exporter'...
Listing './lib/python3.5/site-packages/plainbox/impl/providers'...
Listing './lib/python3.5/site-packages/plainbox/impl/providers/categories'...
Listing './lib/python3.5/site-packages/plainbox/impl/providers/categories/po'...
Listing './lib/python3.5/site-packages/plainbox/impl/providers/categories/units'...
Listing './lib/python3.5/site-packages/plainbox/impl/providers/exporters'...
Listing './lib/python3.5/site-packages/plainbox/impl/providers/exporters/data'...
Listing './lib/python3.5/site-packages/plainbox/impl/providers/exporters/po'...
Listing './lib/python3.5/site-packages/plainbox/impl/providers/exporters/units'...
Listing './lib/python3.5/site-packages/plainbox/impl/providers/manifest'...
Listing './lib/python3.5/site-packages/plainbox/impl/providers/manifest/bin'...
Listing './lib/python3.5/site-packages/plainbox/impl/providers/manifest/po'...
Listing './lib/python3.5/site-packages/plainbox/impl/providers/manifest/units'...
Listing './lib/python3.5/site-packages/plainbox/impl/providers/stubbox'...
Listing './lib/python3.5/site-packages/plainbox/impl/providers/stubbox/bin'...
Listing './lib/python3.5/site-packages/plainbox/impl/providers/stubbox/data'...
Listing './lib/python3.5/site-packages/plainbox/impl/providers/stubbox/po'...
Listing './lib/python3.5/site-packages/plainbox/impl/providers/stubbox/units'...
Listing './lib/python3.5/site-packages/plainbox/impl/providers/stubbox/units/jobs'...
Listing './lib/python3.5/site-packages/plainbox/impl/providers/stubbox/units/testplans'...
Listing './lib/python3.5/site-packages/plainbox/impl/providers/stubbox/whitelists'...
Listing './lib/python3.5/site-packages/plainbox/impl/secure'...
Listing './lib/python3.5/site-packages/plainbox/impl/secure/providers'...
Listing './lib/python3.5/site-packages/plainbox/impl/session'...
Listing './lib/python3.5/site-packages/plainbox/impl/unit'...
Listing './lib/python3.5/site-packages/plainbox/qml_shell'...
Listing './lib/python3.5/site-packages/plainbox/test-data'...
Listing './lib/python3.5/site-packages/plainbox/test-data/html-exporter'...
Listing './lib/python3.5/site-packages/plainbox/test-data/integration-tests'...
Listing './lib/python3.5/site-packages/plainbox/test-data/integration-tests/stub'...
Listing './lib/python3.5/site-packages/plainbox/test-data/xml-exporter'...
Listing './lib/python3.5/site-packages/plainbox/testing_utils'...
Listing './lib/python3.5/site-packages/plainbox/vendor'...
Listing './lib/python3.5/site-packages/plainbox/vendor/argparse'...
Listing './lib/python3.5/site-packages/plainbox/vendor/extcmd'...
Listing './lib/python3.5/site-packages/plainbox/vendor/funcsigs'...
Listing './lib/python3.5/site-packages/plainbox/vendor/morris'...
Listing './lib/python3.5/site-packages/plainbox/vendor/pyglibc'...
Listing './lib/python3.5/site-packages/plainbox/vendor/sphinxarg'...
Listing './lib/python3.5/site-packages/plainbox-0.38.0.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
